--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 li {
   padding: 5px;
   margin: 5px;
-  background: #faebd7;
+  background: blue;
 }
 
 .label {
@@ -16,4 +16,7 @@ li {
 
 .form-group {
   margin-bottom: 5px;
+}
+body {
+  background-color: cadetblue;
 }
