--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,8 +2,8 @@
 	{{name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if devour}}EATING TIME!{{else}}ANOTHA!{{/if}}
+		{{#if devour}}EAT ME!{{else}}ANOTHA!{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger" data-id="{{this.id}}">SEND BACK TO KITCHEN!</button>
 </li>
